# todo-app-rust

./: .env  Cargo.toml
migrations/2023-01-20-175527_create_todo/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
