[package]
name = "server-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.2", features = ["full"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
serde = {version = "1.0.152", features = ["derive"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.6"
axum-macros = "0.3.1"
tower-http = { version = "0.3.5", features = ["cors"] }
